Added Application Insights 2

--- a/.github/workflows/content-api.yml
+++ b/.github/workflows/content-api.yml
@@ -6,7 +6,7 @@ on:
     branches:
     - main
     paths:
-    - 'content-web/**'
+    - 'content-api/**'
     - api.deployment.yml  # These two file
     - api.service.yml     # entries here
 
@@ -43,24 +43,6 @@ jobs:
         registry: ${{ env.containerRegistry }}
         repository: ${{ env.imageRepository }}
         tags: ${{ env.tag }},latest
-
-    # - uses: Azure/aks-set-context@v1
-    #   with:
-    #     creds: '${{ secrets.AZURE_CREDENTIALS }}'
-    #     cluster-name: '${{ env.clusterName }}'
-    #     resource-group: '${{ env.resourceGroupName }}'
-        
-    # - name: Deploy to AKS
-    #   uses: azure/k8s-deploy@v1
-    #   with:
-    #     manifests: |
-    #       api.deployment.yml
-    #       api.service.yml
-    #     images: |
-    #       ${{ env.containerRegistry }}.azurecr.io/${{ env.imageRepository }}:${{ env.tag }}
-    #     imagepullsecrets: |
-    #       ingress-demo-secret
-    #     namespace: ingress-demo
 
     - uses: Azure/aks-set-context@v1
       with:
