--- a/.github/workflows/content-web.yml
+++ b/.github/workflows/content-web.yml
@@ -6,7 +6,7 @@ on:
     branches:
     - main
     paths:
-    - 'content-web/**'
+    - 'content-api/**'
     - web.deployment.yml  # These two file
     - web.service.yml     # entries here
 
@@ -68,18 +68,6 @@ jobs:
         secret-name: ingress-demo-secret
         namespace: ingress-demo
         arguments: --force true
-        
-    # - name: Deploy to AKS
-    #   uses: azure/k8s-deploy@v1
-    #   with:
-    #     manifests: |
-    #       web.deployment.yml
-    #       web.service.yml
-    #     images: |
-    #       ${{ env.containerRegistry }}.azurecr.io/${{ env.imageRepository }}:${{ env.tag }}
-    #     imagepullsecrets: |
-    #       ingress-demo-secret
-    #     namespace: ingress-demo
 
     - name: Deploy to AKS
       uses: azure/k8s-deploy@v1
